# overproofed

./: .gitignore
overproofed/: Cargo.toml
overproofed-wasm/: Cargo.toml
overproofed-wasm/src/: lib.rs
overproofed/src/: lib.rs
web/: .gitignore  build.ninja  index.html  package.json  palette.css  styles.css  tsconfig.json  vite.config.js
web/brandon/: brandon.css  brandon.tar
web/src/: Bread.tsx  Halp.tsx  Recipe.tsx  icon.tsx  index.tsx
web/src/Ui/: Focus.ts  Selection.ts  Strings.ts
